--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <style>
         html {
-            background-color: rgb(235, 235, 235);
+            background-color: #1a1a1a;
+            color: white;
         }
 
         a {
@@ -31,6 +32,7 @@
             gap: 20px;
             margin-top: 180px;
             width: 100%;
+            color: black;
         }
 
         #p {
@@ -48,10 +50,10 @@
 </head>
 
 <body>
-    <div>Kmanager <span id="app_version"></span> (by <span id="app_author"></span>)</div>
+    <div>Kmanager <span id="app_version"></span> by <span id="app_author"></span></div>
     <div class="menu">
         <a id="p" href="planning/index.html">#P</a>
-        <a id="c" href="compta/index.html">€C</a>
+        <a id="c" href="compta/index.html">€B</a>
         <a id="n" href="notes/index.html">!N</a>
     </div>
     <script src="worker.js"></script>
